# SlideGuard2

./: .gitignore  IMPLEMENTATION.md  PHASE0.md  PRD.md  README.md  pyproject.toml  requirement-list.md
packaging/: slideguard.spec
src/slideguard/: __init__.py  __main__.py  app.py  lexicon.py  runtime.py
src/slideguard/application/: __init__.py  session.py
src/slideguard/frontend/: app.css  app.js  index.html
src/slideguard/pptx/: __init__.py  importer.py  patcher.py  probe.py  snapshot.py
src/slideguard/preview/: __init__.py  svg_builder.py  text_flow.py  text_layout.py
src/slideguard/probes/: __init__.py  text_metrics.py
src/slideguard/repair/: __init__.py  executor.py  manager.py  models.py  planner.py
src/slideguard/reporting/: __init__.py  exporters.py
src/slideguard/rules/: __init__.py  factory.py  models.py  r002_blank_slide.py  (+9 more)
tests/integration/: test_real_pptx_patch.py  test_repair_executor.py  test_text_metric_probe.py
tests/unit/: test_fix_planner.py  test_frontend_contract.py  test_lexicon.py  test_lifecycle.py  test_native_dialog.py  test_patcher.py  test_pptx_importer.py  test_pptx_probe.py  test_r002_r003_layout.py  test_r004_font.py  test_r005_font_size.py  test_r006_text_overflow.py  test_r007_alignment.py  test_r008_text_margin.py  test_r009_title.py  test_r010_sensitive_text.py  test_report_exporters.py  test_runtime.py  test_runtime_resources.py  test_scan_orchestrator.py  test_server.py  test_snapshot.py  test_svg_builder.py  test_text_layout.py
tools/: build.ps1  generate_text_metric_probe.py  measure_text_metric_probe_wps.ps1
(+8 files in other folders)
