[project]
name = "slideguard"
version = "0.1.0"
description = "Offline PowerPoint quality inspection for Windows"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "jinja2>=3.1,<4",
  "lxml>=6,<7",
  "openpyxl>=3.1,<4",
  "pillow>=11,<12",
  "python-pptx>=1.0,<2",
  "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pyinstaller>=6.15,<7",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
]

[project.scripts]
slideguard = "slideguard.__main__:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slideguard"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

